[package]
name = "cord-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OHD CORD — the conversational agent web service. Deployable backend for cord.ohd.dev and self-hosted clinic/ambulance instances. Holds scoped share credentials, never storage keys."
publish = false

[[bin]]
name = "cord-server"
path = "src/main.rs"

[lib]
name = "cord_server"
path = "src/lib.rs"

[dependencies]
cord-agent = { path = "../cord-agent" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
async-stream = "0.3"
futures-core = "0.3"
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
hyper = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
jsonwebtoken = "9"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
ulid = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
aes-gcm = "0.10"
url = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
