[package]
name = "ohd-idp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OHD Identity — the OHD project's OpenID Connect provider. Deployed at accounts.ohd.dev, it is the OIDC OP that OHD CORD, OHD Connect, and future OHD apps authenticate users against."
publish = false

[[bin]]
name = "ohd-idp"
path = "src/main.rs"

[lib]
name = "ohd_idp"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
jsonwebtoken = "9"
rsa = { version = "0.9", default-features = false, features = ["std", "pem", "sha2"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
