[package]
name = "ohd-cli-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared OAuth 2.0 device-flow client + Crockford-base32 ULID helpers used by the ohd-connect and ohd-emergency CLIs."
publish = false

[lib]
name = "ohd_cli_auth"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde = { workspace = true }
oauth2 = "5"
url = "2.5.8"
# `oauth2`'s reqwest helper re-exports `reqwest::Client`; we share the
# same underlying type so we don't end up with two reqwest version trees.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { workspace = true }

[dev-dependencies]
serde_json = "1"
