[package]
name = "ohd-relay-client"
version = "0.0.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0 OR MIT"
authors = ["OHD Project"]
repository = "https://github.com/ohd-foundation/ohd"
description = "OHD Relay client — storage-side registration, OpenTunnel QUIC client, and the TunnelFrame codec. Shared by ohd-storage-server, the Android uniffi binding, and CORD."
publish = false

[lib]
name = "ohd_relay_client"
path = "src/lib.rs"

# Self-contained: explicit deps (no workspace inheritance) so this crate can
# be path-dep'd from any consumer — notably the Android uniffi binding, which
# cross-compiles for the `*-android` targets — without forcing that consumer
# to share the storage workspace's `[workspace.package]` fields or its
# server-only dependency tree.
#
# Dependency tiers:
#  - The default build pulls only the *portable* surface: the TunnelFrame
#    codec, the registration HTTP flow, the QUIC tunnel client primitives,
#    and the TLS verifiers. quinn + rustls + reqwest are all pure-Rust /
#    ring-backed; they cross-compile cleanly for Android.
#  - The `tunnel-service` feature adds the hyper HTTP/2 bridge that demuxes
#    relay sessions onto a local `connectrpc::ConnectRpcService`. That is a
#    heavy, server-only concern, so it is gated off by default; the Android
#    binding builds without it.

[features]
default = []
# Bridge accepted relay sessions into a hyper HTTP/2 server connection
# running a `connectrpc::ConnectRpcService`. Server-only; pulls hyper-util +
# connectrpc + tower. Off by default so the Android uniffi binding (which
# only needs registration + the frame codec) stays lean.
tunnel-service = ["dep:connectrpc", "dep:hyper", "dep:hyper-util", "dep:tower"]

[dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
bytes = "1"
hex = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "io-util", "sync", "time", "macros"] }

# QUIC tunnel transport. quinn + rustls are pinned to the `ring` crypto
# provider (vs aws-lc-rs default) so we don't drag the aws-lc-sys C build
# into the Android cross-compile cache.
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
# OS trust-store fallback for the regular WebPKI path. Builds for Android.
rustls-platform-verifier = "0.6"

# Registration HTTP client (`POST /v1/register|heartbeat|deregister`).
# rustls-tls keeps OpenSSL out of the build.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
http = "1"

# Server-only: the hyper HTTP/2 bridge for `tunnel-service`.
connectrpc = { version = "0.4", features = ["server"], optional = true }
hyper = { version = "1", optional = true }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto", "service"], optional = true }
tower = { version = "0.5", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
