[package]
name = "ohd-relay-client"
version = "0.0.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0 OR MIT"
authors = ["OHD Project"]
repository = "https://github.com/ohd-foundation/ohd"
description = "OHD Relay client — storage-side registration, OpenTunnel QUIC client, and the TunnelFrame codec. Shared by ohd-storage-server, the Android uniffi binding, and CORD."
publish = false

[lib]
name = "ohd_relay_client"
path = "src/lib.rs"

# Self-contained: explicit deps (no workspace inheritance) so this crate can
# be path-dep'd from any consumer — notably the Android uniffi binding, which
# cross-compiles for the `*-android` targets — without forcing that consumer
# to share the storage workspace's `[workspace.package]` fields or its
# server-only dependency tree.
#
# Dependency tiers:
#  - The default build pulls only the *portable* surface: the TunnelFrame
#    codec, the registration HTTP flow, the QUIC tunnel client primitives,
#    and the TLS verifiers. quinn + rustls + reqwest are all pure-Rust /
#    ring-backed; they cross-compile cleanly for Android.
#  - The `tunnel-service` feature adds the hyper HTTP/2 bridge that demuxes
#    relay sessions onto a local `connectrpc::ConnectRpcService`. That is a
#    heavy, server-only concern, so it is gated off by default; the Android
#    binding builds without it.

[features]
default = []
# Bridge accepted relay sessions into a hyper HTTP/2 server connection
# running a `connectrpc::ConnectRpcService`. Server-only; pulls hyper-util +
# connectrpc + tower. Off by default so the Android uniffi binding (which
# only needs registration + the frame codec) stays lean.
tunnel-service = ["dep:connectrpc", "dep:hyper", "dep:hyper-util", "dep:tower"]
# The phone-side share responder: terminates the inner TLS server side with
# the storage identity cert and speaks share-scoped MCP over the tunnel.
# Pulls `ohd-h3-helpers` (the `tls_pin` cert/pin primitives), `ohd-mcp-core`
# (the scoped catalog + dispatch), `ohd-storage-core` and `tokio-rustls`.
# Enabled by the Android uniffi binding — which already links `ohd-mcp-core`
# + `ohd-storage-core`, so this adds no new cross-compile burden — and off by
# default so a plain `ohd-relay-client` build stays minimal.
responder = ["dep:ohd-h3-helpers", "dep:ohd-mcp-core", "dep:ohd-storage-core", "dep:tokio-rustls", "dep:rcgen"]

[dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
bytes = "1"
hex = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "io-util", "sync", "time", "macros"] }

# QUIC tunnel transport. quinn + rustls are pinned to the `ring` crypto
# provider (vs aws-lc-rs default) so we don't drag the aws-lc-sys C build
# into the Android cross-compile cache.
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
# OS trust-store fallback for the regular WebPKI path. Builds for Android.
rustls-platform-verifier = "0.6"

# Registration HTTP client (`POST /v1/register|heartbeat|deregister`).
# rustls-tls keeps OpenSSL out of the build.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
http = "1"

# Server-only: the hyper HTTP/2 bridge for `tunnel-service`.
connectrpc = { version = "0.4", features = ["server"], optional = true }
hyper = { version = "1", optional = true }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto", "service"], optional = true }
tower = { version = "0.5", optional = true }

# `responder`-only: the inner-TLS-server + scoped-MCP responder. tokio-rustls
# is the async TLS adapter over the tunnel's DATA-frame stream; ohd-h3-helpers
# carries the `tls_pin` cert-minting + pin primitives; ohd-mcp-core is the
# share-scoped tool catalog + dispatch. All three cross-compile for Android.
ohd-h3-helpers = { path = "../ohd-h3-helpers", optional = true }
ohd-mcp-core = { path = "../ohd-mcp-core", optional = true }
ohd-storage-core = { path = "../ohd-storage-core", optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"], optional = true }
# `responder` derives the storage SPKI (the share-artifact pin) by loading
# the Ed25519 identity key into rcgen and reading its public-key DER. Pure
# Rust / ring-backed — cross-compiles for Android.
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util"] }
# The responder's end-to-end test opens an on-disk storage core.
tempfile = "3"
