[package]
name = "ohd-storage-bindings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "OHD Storage foreign-language bindings (uniffi for Kotlin/Swift, PyO3 for Python)"
readme = "../../README.md"

[lib]
name = "ohd_storage_bindings"
path = "src/lib.rs"
# - cdylib: Android (.so per ABI), iOS (universal in xcframework), Linux/macOS .so/.dylib
# - staticlib: iOS xcframework needs a static archive when not using a dynamic framework
# - rlib: keeps the crate consumable from Rust integration tests / future server-side
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
# Standalone binary for generating Kotlin / Swift / Python sources from this
# crate's exposed surface. Invoked from a developer machine with the cross
# toolchain installed; not used by the workspace `cargo build`.
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

[features]
default = []
# Pulls the uniffi CLI in so `cargo run --bin uniffi-bindgen` works. Off by
# default so a plain `cargo build --workspace` doesn't drag the bindgen deps
# into every consumer of this crate.
cli = ["uniffi/cli"]
# These are documentation-only flags today — the actual language pickers are
# command-line args on `uniffi-bindgen generate --language kotlin|swift|python`.
# Listed here so build scripts on consumer projects (e.g. an Android Gradle
# task) can pass `--features kotlin` if they later want to gate codegen.
kotlin = []
swift = []
python = []
# Compile the PyO3-direct module (`src/pyo3_module.rs`) into the cdylib so
# `maturin build --features pyo3` produces a real Python wheel. Off by
# default so a plain `cargo build --workspace` (and the Android / iOS
# uniffi recipes) don't drag the pyo3 build tree in. See
# `crates/ohd-storage-bindings/README.md` for the full Python recipe.
pyo3 = ["dep:pyo3"]
# Convenience alias for `maturin develop --features extension-module` flows
# (PyO3's recommended trick when you want to skip linking libpython into the
# wheel — extension-module on top of pyo3 itself is the magic combo).
extension-module = ["pyo3", "pyo3/extension-module"]

[dependencies]
ohd-storage-core = { path = "../ohd-storage-core" }
ohd-mcp-core = { path = "../ohd-mcp-core" }
# The phone-side share responder (CORD data link Phase 4d). The `responder`
# feature pulls the inner-TLS server + share-scoped MCP responder; the
# binding drives it on a background tokio runtime so OHD Connect can serve a
# remote consumer through the relay. All deps cross-compile for Android.
ohd-relay-client = { path = "../ohd-relay-client", features = ["responder"] }
# Background runtime for the responder + the registration HTTP call.
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
# Generates the storage's long-lived Ed25519 identity key (PKCS#8 DER).
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
# Hex encoding for the identity key + user ULID at the FFI boundary.
hex = "0.4"
# Structured logging for the background responder task. The `log` feature
# makes every `tracing` event in the dependency tree (the relay tunnel +
# share responder log through `tracing`) also emit a `log` record when no
# `tracing` subscriber is installed — routing them to `android_logger` and
# thus logcat. This is what makes the tunnel client observable on-device.
tracing = { version = "0.1", features = ["log"] }
# The panic hook logs through the `log` facade; on Android `android_logger`
# (below) is the backend, routing panics to logcat.
log = "0.4"
# uniffi 0.28 is the stable target as of 2026-Q1: ships proc-macro bindings
# (`#[uniffi::export]`), Kotlin + Swift + Python codegen, and an in-tree
# `uniffi_bindgen_main()` entrypoint. Newer (0.29+) is API-compatible for our
# uses; we pin 0.28 for ecosystem alignment with cargo-ndk-published recipes.
uniffi = { version = "0.28", default-features = false }
thiserror.workspace = true
# PyO3 0.28 is the latest stable as of 2026-Q1; supports CPython 3.8 → 3.14.
# Using abi3-py311 makes the resulting wheel forward-compatible with every
# CPython 3.11+ ABI without re-building per minor (matches the Python
# version floor we use in care/cli + the OHD MCP servers). The
# `extension-module` feature is enabled via the cargo `extension-module`
# feature alias above (maturin's default profile turns it on for us).
pyo3 = { version = "0.28", features = ["abi3-py311"], optional = true }

# Routes the `log` facade to Android logcat (the panic hook). Android-only —
# liblog is a platform library; on the host build the `log` macros are inert
# no-ops with no logger installed. Keeps `#![forbid(unsafe_code)]` intact:
# the FFI lives inside android_logger, not this crate.
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[build-dependencies]
# `build` feature enables the proc-macro scaffolding hook used by build.rs.
uniffi = { version = "0.28", features = ["build"] }
