[package]
name = "ohd-storage-conformance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "OHD Storage conformance corpus runner — validates OHDC v0 fixtures byte-for-byte against a fresh storage instance"

[lib]
name = "ohd_storage_conformance"
path = "src/lib.rs"

[dependencies]
ohd-storage-core = { path = "../ohd-storage-core" }
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
anyhow.workspace = true
tempfile = "3"

[dev-dependencies]
tempfile = "3"
